add_executable(ex1 ex1.c)
add_executable(ex2 ex2.c)
add_executable(ex3 ex3.c)
add_executable(ex4 ex4.c)
add_executable(ex5 ex5.c)
add_executable(ex6 ex6.c)
add_executable(ex7 ex7.c)
add_executable(ex8 ex8.c)
add_executable(ex9 ex9.c)
add_executable(ex10 ex10.c)
add_executable(ex11 ex11.c)
add_executable(ex12 ex12.c)
add_executable(ex13 ex13.c)
add_executable(ex14 ex14.c)
add_executable(ex15 ex15.c)
add_executable(ex16 ex16.c)
add_executable(ex17 ex17.c)
add_executable(ex18 ex18.c)
add_executable(ex19 ex19.c)
add_executable(ex20 ex20.c)
add_executable(ex21 ex21.c)
add_executable(ex22 ex22.c)
add_executable(ex23 ex23.c)
add_executable(ex24 ex24.c)
