add_executable(ex01 ex1.c)
add_executable(ex02_todo ex2.c)
add_executable(ex03 ex3.c)
add_executable(ex04 ex4.c)
add_executable(ex05 ex5.c)
add_executable(ex06 ex6.c)
add_executable(ex07 ex7.c)
add_executable(ex08 ex8.c)
add_executable(ex09_todo ex9.c)
add_executable(ex10_todo ex10.c)
add_executable(ex11_todo ex11.c)
add_executable(ex12_todo ex12.c)
add_executable(ex13_todo ex13.c)
add_executable(ex14_todo ex14.c)
add_executable(ex15_todo ex15.c)
add_executable(ex16_todo ex16.c)
add_executable(ex17_todo ex17.c)
add_executable(ex18_todo ex18.c)
add_executable(ex19_todo ex19.c)
add_executable(ex20_todo ex20.c)
add_executable(ex21_todo ex21.c)
add_executable(ex22_todo ex22.c)
add_executable(ex23_todo ex23.c)
add_executable(ex24_todo ex24.c)
add_executable(ex25_todo ex25.c)
add_executable(ex26_todo ex26.c)
add_executable(ex27_todo ex27.c)
add_executable(ex28_todo ex28.c)
add_executable(ex29_todo ex29.c)
add_executable(ex30_todo ex30.c)
add_executable(ex31_todo ex31.c)
add_executable(ex32_todo ex32.c)